--- a/CharlyUwampojejeCV.css
+++ b/CharlyUwampojejeCV.css
@@ -10,11 +10,6 @@ body {
   font-family: "montserrat", century gothic;
 }
 
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: "montserrat", century gothic;
-}
 .main {
   background-color: white;
   height: auto;
@@ -22,8 +17,9 @@ body {
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
-  top: 60%;
+  top: 50%;
 }
+
 .left {
   background-image: repeating-linear-gradient(
       268deg,
@@ -37,7 +33,7 @@ body {
   float: left;
   text-align: center;
   font-size: 90%;
-  padding: 10px;
+  padding: 30px 0px 50px 30px;
 }
 
 .profile-img {
@@ -45,7 +41,7 @@ body {
   width: 180px;
   border-radius: 60%;
   margin-bottom: 30px;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .profile-img img {
@@ -53,13 +49,14 @@ body {
   width: 200px;
   border-radius: 100px;
 }
+
 .right {
   font-size: 70%;
-  padding: 0px 30px;
+  padding: 10px 40px 0px 280px;
 }
 
 .name-div {
-  padding: 70px 0px 60px 55px;
+  padding: 50px 0px 30px 10px;
   text-align: start;
   letter-spacing: 2px;
   font-size: large;
@@ -73,13 +70,10 @@ body {
   font-size: 300%;
 }
 
-.nom {
-  font-size: 250%;
-}
-.prenom {
-  font-size: 300%;
+h2 {
+  margin: 3% 0% 3% 0%;
 }
 
-h2 {
-  margin: 3%;
+header {
+  margin: 3% 0% 3% 0%;
 }
